# euler

./: .gitattributes  .gitignore  AUTHOR.md  INSTALL.md  LICENCE.md  README.md  cabal.project  euler.cabal  hie.yaml
src/Euler/: Problem040.hs
src/Euler/Data/: SkewHeap.hs
src/Euler/Problem031/: OGF.hs
util/: Build-File.ps1
